@@ -78,6 +78,7 @@ Merged from 2.2:
  * Multi-version in-JVM dtests (CASSANDRA-14937)
  * Allow instance class loaders to be garbage collected for inJVM dtest (CASSANDRA-15170)
  * Add support for network topology and query tracing for inJVM dtest (CASSANDRA-15319)
+ * Add a compaction option to TWCS to ignore sstables overlapping checks (CASSANDRA-13418)
 
 
 3.0.18
